--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,12 @@
         "symfony/framework-bundle": "~2.7|~3.0|~4.0",
         "symfony/console": "~2.7|~3.0|~4.0",
         "symfony/dependency-injection": "~2.7|~3.0|~4.0",
-        "nyholm/symfony-bundle-test": "^1.2"
+        "nyholm/symfony-bundle-test": "^1.2",
+        "phpunit/phpunit": "^6.4",
+        "doctrine/annotations": "^1.5"
     },
     "require-dev": {},
     "autoload": {
-        "psr-4": { "OrangeRT\\AnonymizeBundle\\": "src" }
+        "psr-4": { "OrangeRT\\AnonymizeBundle\\": ["src", "tests"] }
     }
 }
