--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "orange-rt/anonymize-bundle",
     "description": "A bundle to anonymize sensitive database data",
     "type": "symfony-bundle",
+    "version": "0.0.1",
     "license": "MIT",
     "authors": [
         {
