--- a/composer.json
+++ b/composer.json
@@ -30,5 +30,10 @@
                 "tests"
             ]
         }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "master"
+        }
     }
 }
