--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "phpunit/phpunit": "^6.4",
         "doctrine/annotations": "^1.5",
         "jms/metadata": "^1.6",
-        "fzaninotto/faker": "^1.7"
+        "fzaninotto/faker": "^1.7",
+        "doctrine/orm": "^2.5"
     },
     "require-dev": {},
     "autoload": {
