--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "doctrine/annotations": "^1.5",
         "jms/metadata": "^1.6",
         "fzaninotto/faker": "^1.7",
-        "doctrine/orm": "^2.5"
+        "doctrine/orm": "^2.5",
+        "roave/security-advisories": "dev-master"
     },
     "require-dev": {},
     "autoload": {
@@ -34,7 +35,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "master"
+            "dev-master": "master-dev"
         }
     }
 }
