--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,9 @@
         "doctrine/orm": "^2.5",
         "roave/security-advisories": "dev-master"
     },
-    "require-dev": {},
+    "require-dev": {
+        "squizlabs/php_codesniffer": "3.*"
+    },
     "autoload": {
         "psr-4": { "OrangeRT\\AnonymizeBundle\\": "src" }
     },
