--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,7 @@
         "doctrine/annotations": "^1.5",
         "jms/metadata": "^1.6",
         "fzaninotto/faker": "^1.7",
-        "doctrine/orm": "^2.5",
-        "roave/security-advisories": "dev-master"
+        "doctrine/orm": "^2.5"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "3.*"
