--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,10 @@
         {
             "name": "Sander Verkuil",
             "email": "sander@legionelladossier.nl"
+        },
+        {
+            "name": "Antonin Jourdan",
+            "email": "antonin.jourdan@webcraft-studio.com"
         }
     ],
     "require": {
@@ -20,17 +24,15 @@
         "jms/metadata": "^1.6",
         "fzaninotto/faker": "^1.7",
         "doctrine/orm": "^2.5",
-        "roave/security-advisories": "dev-master"
     },
     "require-dev": {
-        "squizlabs/php_codesniffer": "3.*"
     },
     "autoload": {
         "psr-4": { "OrangeRT\\AnonymizeBundle\\": "src" }
     },
     "autoload-dev": {
         "psr-4": {
-            "OrangeRT\\AnonymizeBundle\\": [
+            "merguezzz\\AnonymizeBundle\\": [
                 "tests"
             ]
         }
